svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ues-sit-deployment
  labels:
    app: ues-sit-deployment
    service: ues-sit-deployment
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ues-sit-deployment
